adjust jifenbao shidou page

--- a/app/views/users/commission/myCredits.scala.html
+++ b/app/views/users/commission/myCredits.scala.html
@@ -14,17 +14,37 @@ user
             </ul>
         </div>
         <div class="main-content">
+            <div class="credits mb20">
+                <div class="credits_info">您已经获得<span>0</span>个集分宝，值<span>￥0</span>元</div>
 
+                <div class="title">集分宝返利记录</div>
+            <table class="table">
+                <thead>
+                <tr  height="35">
+                    <th  width="110">返利商品</th>
+                    <th  width="174">返利数量</th>
+                    <th  width="127">处理时间</th>
+                    <th  width="272">处理结果</th>
+                </tr>
+                </thead>
+                <tbody>
 
+                <tr>
+                    <td colspan="4" class="table_one">您还没有返利，赶快加入吧！</td>
+                </tr>
 
+                </tbody>
+            </table>
+
+            </div>
 
             <div class="help">
                 <div class="help-title">帮助</div>
                 <ul>
-                    <li><a href="/account/tbkhelp#help4" target="_blank">了解什么是购物返现？</a></li>
-                    <li><a href="/account/tbkhelp#help1" target="_blank">了解什么是集分宝</a></li>
-                    <li> <a href="/account/tbkhelp#help2" target="_blank">了解什么是食豆</a> </li>
-                    <li><a href="/account/tbkhelp#help3" target="_blank">了解什么是邀请有奖</a></li>
+                    <li><a href="#" target="_blank">了解什么是购物返现？</a></li>
+                    <li><a href="#" target="_blank">了解什么是集分宝</a></li>
+                    <li> <a href="#" target="_blank">了解什么是食豆</a> </li>
+                    <li><a href="#" target="_blank">了解什么是邀请有奖</a></li>
 
                 </ul>
             </div>
