--- a/app/views/users/commission/invite.scala.html
+++ b/app/views/users/commission/invite.scala.html
@@ -17,7 +17,7 @@ user
         <div class="main-content">
             <div class="invite">
 
-                <div class="li">一：邀请有奖之规则</div>
+                <div class="title">一：邀请有奖之规则</div>
                 <ul class="invite-intro clearfix">
                         <li>1、您每邀请一个朋友加入食美特，（登录并成功返利），最高可获得<strong class="rc">10元</strong>的邀请奖励</li>
                         <li>2、邀请好友必须是新用户（即以前没登录过食美特，或者没有注册过食美特），如果她已是食美特老用户了，那么是没有奖励的</li>
@@ -29,14 +29,14 @@ user
                 </ul>
 
 
-                <div class="li">二：这是您的专用邀请链接，可通过任何方式发送给好友</div>
+                <div class="title">二：这是您的专用邀请链接，可通过任何方式发送给好友</div>
                 <div class="invite-link clearfix">
                     <textarea id="clip-text" class="base-txa invite_txa">这里，不仅是中国最大的美食购物分享社区，而且购物还可以获得集分宝哦！~ http://smeite.com/user/regist?i=@user.get.id.get</textarea>
                     <input type="button" class="bbl-btn submit" id="J_Clip" value="复制">
                 </div>
 
 
-                <div class="li">三：分享到您的社区</div>
+                <div class="title">三：分享到您的社区</div>
                 <div class="invite-share clearfix">
                     <ul class="clearfix">
                         <li><a class="i-sina"
@@ -57,17 +57,17 @@ user
                     </ul>
                     <div class="share-tip">温馨提示：据食美特统计，QQ空间最容易邀请到好友，所以一定记得把您的专用邀请链接发到QQ空间里哦~</div>
                 </div>
-                <div class="li">四：邀请返利记录</div>
+                <div class="title">四：邀请返利记录</div>
                 <div class="invite-record clearfix">
                     <div class="invite_success mb10">您已成功邀请<span>@totalInviters</span>人，累计获得<span>@totalReward</span>元</div>
 
-                    <table id="invite_table" class="table">
+                    <table  class="table">
                         <thead>
-                        <tr class="invite_tr" height="35">
-                            <th class="table_top" width="110">好友昵称</th>
-                            <th class="table_top" width="174">好友来源</th>
-                            <th class="table_top" width="127">好友返利</th>
-                            <th class="table_top" width="272">奖励情况</th>
+                        <tr  height="35">
+                            <th  width="110">好友昵称</th>
+                            <th  width="174">好友来源</th>
+                            <th  width="127">好友返利</th>
+                            <th  width="272">奖励情况</th>
                         </tr>
                         </thead>
                         <tbody>
