--- a/public/assets/css/template/user.setting.css
+++ b/public/assets/css/template/user.setting.css
@@ -420,7 +420,7 @@
     zoom: 1;
     padding-left:20px
 }
-.invite .li {
+.invite .title ,.credits .title,.shiDou .title  {
     font-size: 16px;
     display: block;
     margin-bottom:5px;
@@ -695,6 +695,29 @@ table {
     float: right;
     position: static
 }*/
+
+/*我的集分宝*/
+.credits,.shiDou{
+    margin-left: 20px;
+}
+.credits .credits_info, .shiDou .shiDou_info {
+    background: #fdf6ea;
+    padding: 0 0 0 20px;
+    display: block;
+    margin-bottom: 20px;
+    height: 32px;
+    line-height: 32px;
+    color: #333
+}
+
+.credits .credits_info span,.shiDou .shiDou_info span {
+    font-size: 14px;
+    padding: 0 5px;
+    color: #f32a6b;
+    font-weight: 700;
+}
+
+
 /*help*/
 .help {
     padding-left: 20px;
