--- a/app/views/users/commission/myCredits.scala.html
+++ b/app/views/users/commission/myCredits.scala.html
@@ -42,9 +42,8 @@ user
                 <div class="help-title">帮助</div>
                 <ul>
                     <li><a href="#" target="_blank">了解什么是购物返现？</a></li>
-                    <li><a href="#" target="_blank">了解什么是集分宝</a></li>
-                    <li> <a href="#" target="_blank">了解什么是食豆</a> </li>
-                    <li><a href="#" target="_blank">了解什么是邀请有奖</a></li>
+                    <li><a href="#" target="_blank">了解什么是集分宝?</a></li>
+
 
                 </ul>
             </div>
