add user_invite_prize and user_exchange_shidou

--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -76,7 +76,9 @@
                     <a href="#"><i class="icon icon-th-list"></i> <span>用户管理</span></a>
                     <ul>
                         <li><a href="@controllers.admin.routes.Users.list(1)">用户管理</a></li>
-                        <li><a href="">邮件通知</a></li>
+                        <li><a href="">集分宝返利</a></li>
+                        <li><a href="">邀请有奖</a></li>
+                        <li><a href="">食豆兑换申请</a></li>
                     </ul>
                 </li>
 
