add edit user exchange shidou

--- a/app/views/admin/users/filterExchangeShiDous.scala.html
+++ b/app/views/admin/users/filterExchangeShiDous.scala.html
@@ -106,7 +106,7 @@
                                 <td>@exchangeShiDou.handleTime</td>
                                 <td>
 
-                                    <a href="@controllers.admin.routes.Users.edit(exchangeShiDou.id.get)"><i class="icon-edit"></i></a>
+                                    <a href="@controllers.admin.routes.Users.editExchangeShiDou(exchangeShiDou.id.get)"><i class="icon-edit"></i></a>
 
 
                                 </td>
