--- a/app/views/admin/users/exchangeShiDous.scala.html
+++ b/app/views/admin/users/exchangeShiDous.scala.html
@@ -21,7 +21,7 @@
                         <h5>食豆兑换申请筛选</h5>
                     </div>
                     <div class="widget-content nopadding">
-                        <form class=" form-horizontal" id="J_filterForm" method="get" action="@controllers.admin.routes.Users.filterUsers">
+                        <form class=" form-horizontal" id="J_filterForm" method="get" action="@controllers.admin.routes.Users.filterExchangeShiDou">
                             <input type="hidden" name="currentPage" id="J_currentPage" value="1">
                             <div class="error-row">
                                 <p class="error"></p>
@@ -106,7 +106,7 @@
                                 <td>@exchangeShiDou.handleTime</td>
                                 <td>
 
-                                    <a href="@controllers.admin.routes.Users.edit(exchangeShiDou.id.get)"><i class="icon-edit"></i></a>
+                                    <a href="@controllers.admin.routes.Users.editExchangeShiDou(exchangeShiDou.id.get)"><i class="icon-edit"></i></a>
 
 
                                 </td>
