add invite prizes

--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -77,7 +77,7 @@
                     <ul>
                         <li><a href="@controllers.admin.routes.Users.list(1)">用户管理</a></li>
                         <li><a href="">集分宝返利</a></li>
-                        <li><a href="">邀请有奖</a></li>
+                        <li><a href="@controllers.admin.routes.Users.invitePrizes(1)">邀请有奖</a></li>
                         <li><a href="@controllers.admin.routes.Users.exchangeShiDous(1)">食豆兑换申请</a></li>
                     </ul>
                 </li>
