adjust user invite prize

--- a/app/views/admin/users/invitePrizes.scala.html
+++ b/app/views/admin/users/invitePrizes.scala.html
@@ -147,7 +147,7 @@
                              // alert(data.code)
                               if(data.code == "100"){
                                   $("#J_batchInvitePrizes").addClass("btn-success").html("更新完成")
-                                  window.refresh()
+                                  window.location.reload()
                               }else{
                                   alert(data.message)
                               }
