--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -76,7 +76,7 @@
                     <a href="#"><i class="icon icon-th-list"></i> <span>用户管理</span></a>
                     <ul>
                         <li><a href="@controllers.admin.routes.Users.list(1)">用户管理</a></li>
-                        <li><a href="">集分宝返利</a></li>
+                        <li><a href="@controllers.admin.routes.Users.taobaokeIncomes(1)">集分宝返利</a></li>
                         <li><a href="@controllers.admin.routes.Users.invitePrizes(1)">邀请有奖</a></li>
                         <li><a href="@controllers.admin.routes.Users.exchangeShiDous(1)">食豆兑换申请</a></li>
                     </ul>
