add taobaoke income 1

--- a/app/views/admin/users/taobaokeIncomes.scala.html
+++ b/app/views/admin/users/taobaokeIncomes.scala.html
@@ -18,14 +18,13 @@
                     <div class="control-group">
                         <label class="control-label" >申请时间：</label>
                         <div class="controls">
-                         <input type="date" name="startDate" id="J_taobaokeDate" class="date" value="">
+                         <input type="date" name="day" id="J_taobaokeDate" value="" required="required">
                         </div>
-                    </div>
-                    <div class="control-group">
                         <div class="controls">
                             <input type="submit" class="btn btn-info" value="查看淘宝客收益"/>
                         </div>
                     </div>
+
                 </form>
             </div>
         </div>
