add smeite.js isNew

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -185,6 +185,7 @@
         userId:"@user.get.id",
         userPhoto:photo,
         nick:"@user.get.name",
+        status:"@user.get.status",
         isBlack: '@if(user.get.status==4){true} else {false}'
     }
 
