adjust new users prize

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -169,6 +169,7 @@
         userId:"",
         userPhoto:photo,
         nick:"",
+        status:"",
         isBlack: "",
         level : ""
     }
