--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -5,13 +5,7 @@
  * Time: 下午7:24
  * 维护：zuosanshao@qq.com
 */
-/*base css */
-/**
- * Created by zuosanshao.
- * Date: 12-9-7
- * Time: 上午10:08
- * 维护人员:zuosanshao@qq.com
- */
+
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td {
     margin: 0;
     padding: 0
@@ -916,6 +910,59 @@ input:-moz-placeholder { font-size:12px; }
     color: #ff7f00;
     text-decoration: underline;
 }
+#J_newGiftDialog {
+    width: 500px;
+}
+#J_newGiftDialog .hd h3 {
+    color: #E26;
+    font-size: 16px;
+    font-weight: bolder;
+}
+#J_newGiftDialog .gift{
+    margin: 30px auto;
+    position: relative;
+}
+#J_newGiftDialog .gift_area{
+    position: relative;
+    margin: 10px auto;
+    background: url(/assets/ui/new_gift_bg.png) no-repeat 0 0 transparent;
+    width: 170px;
+    height: 107px;
+    overflow: hidden;
+}
+#J_newGiftDialog .gift_bg,#J_newGiftDialog .gift_roll{
+    padding: 7px 8px;
+}
+#J_newGiftDialog .gift_left_value{
+    position: absolute;
+    left: 28px;
+    top: 20px;
+    font-size: 60px;
+}
+#J_newGiftDialog .gift_right_value{
+    position: absolute;
+    right: 28px;
+    top: 20px;
+    font-size: 60px;
+}
+#J_newGiftDialog .hide{
+     display: none;
+}
+#J_newGiftDialog .show{
+    display:block;
+}
+#J_newGiftDialog .gift_giveup{
+    float: right;
+}
+
+#J_newGiftDialog .gift_handle { margin:50px auto 10px;padding:0 15px 0 40px;width:65px;height:36px;line-height:36px;outline:none;color:#fff;text-align:left;background:#ee2266 url(images/like-btn.png) no-repeat right -45px;-moz-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-webkit-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; }
+#J_newGiftDialog .gift_handle:hover { background-position:right -140px;text-decoration:none; }
+#J_newGiftDialog .gift_handle:active { background-position:right -240px;text-decoration:none; }
+#J_newGiftDialog .gift_handle i { position:relative;top:0;left:0;width:40px;height:36px;background:url(images/like-btn.png) no-repeat 0 0; }
+#J_newGiftDialog .gift_handle:hover i { background-position:0 -92px; }
+#J_newGiftDialog .gift_handle:active i { background-position:0 -191px; }
+
+
 /* 第三方登录设置基本信息浮层 */
 .set-box { width:360px;margin:0 auto; }
 .set-box .title-info { padding:40px 0 20px 0;border-bottom:1px dotted #cdcdcd; }
@@ -1032,22 +1079,28 @@ input:-moz-placeholder { font-size:12px; }
 .friendApply p{ line-height:2;}
 
 /* 404页面 */
+/*
 .notfound { width:960px;height:450px;background:#fff url(images/404bg.jpg) right top no-repeat;overflow:hidden; }
 .notfound .text { padding:55px 65px;width:255px; }
 .notfound .text h2 { font-size:16px;padding-bottom:10px; }
 .notfound .text .vline { color:#dedede; }
 .notfound .text .words { margin-top:30px;padding-top:10px;border-top:1px dotted #d1d1d1;line-height:2.5; }
 
-/* 宕机页面 */
+*/
+/* 宕机页面 *//*
+
 .toobusy { position:relative;width:960px;height:620px;background:#fff url(images/toobusy.png) center no-repeat;overflow:hidden; }
 .toobusy .text { position:absolute;z-index:9;left:130px;bottom:35px; }
 
-/* 公共页面 */
+*/
+/* 公共页面 *//*
+
 .common { padding:40px;margin:0 auto;background:#fff;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:0 1px 1px rgba(0,0,0,0.1);-webkit-box-shadow:0 1px 1px rgba(0,0,0,0.1);box-shadow:0 1px 1px rgba(0,0,0,0.1); }
 .common h2 { line-height:1.2;margin:0 auto 20px;padding:0 0 10px 0;font-size:16px;border-bottom:1px dotted #d1d1d1; }
 .common p { margin:0 0 20px 0; }
 .common .job-block { margin-bottom:30px; }
 .common .job-block h3 { font-size:14px;font-weight:normal;margin-bottom:20px; }
+*/
 
 /* 分享 */
 .samdwich{padding: 15px 5px 0 5px;}
@@ -1124,11 +1177,11 @@ input:-moz-placeholder { font-size:12px; }
 #J_GoodsExistD .goods-info .base-txa { width:320px;height:55px; }
 #J_GoodsExistD .goods-act { padding:15px 0 0 100px; }
 /* 添加其他图片 */
-.ap-dialog { position:absolute;z-index:10000;width:360px;background:#f3f3f3;border:1px solid #dedede; }
+/*.ap-dialog { position:absolute;z-index:10000;width:360px;background:#f3f3f3;border:1px solid #dedede; }
 .ap-dialog .content { position:relative;padding:8px 5px 5px; }
 .ap-dialog .ap-form .ap-input { float:left;_display:inline;width:290px; }
 .ap-dialog .ap-form .src-sub { float:right;margin-top:6px;cursor:pointer; }
-.ap-dialog .ap-form .text-tip { display:none;padding:5px 0;line-height:1.1; }
+.ap-dialog .ap-form .text-tip { display:none;padding:5px 0;line-height:1.1; }*/
 /* 分享宝贝成功 通用带操作不隐藏提示窗*/
 #J_PubSuccessD,
 .tip-for-oper { width:350px;z-index:10000; }
@@ -1142,6 +1195,7 @@ input:-moz-placeholder { font-size:12px; }
 
 
 /* 类目导航条 */
+/*
 .category-nav { height:36px;border-left:1px solid #f1f1e6\9;border-right:1px solid #f1f1e6\9;box-shadow:0 1px 1px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 1px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 1px rgba(34,25,25,0.2); }
 .category-nav .nav-base { padding-top:3px;background:#dedede; }
 .category-nav .nav-bar { height:33px;background:#fff;position:relative; }
@@ -1155,17 +1209,19 @@ input:-moz-placeholder { font-size:12px; }
 .category-nav .nav-bar li.on a.more .arrow-dn { right:15px; }
 .category-nav .nav-bar i { position:absolute;z-index:9;left:0;top:-3px;width:100%;height:1px;opacity:0.1;filter:alpha(opacity=10);background:#000;*display:none; }
 .category-nav .nav-bar .line-shadow { position:absolute;z-index:9;left:0;bottom:0;width:100%;height:1px;box-shadow:0 1px 1px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 1px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 1px rgba(34,25,25,0.2);overflow:hidden; }
+*/
 
 /* 九宫格 */
-.nineGrid { width:204px;margin-right:13px;padding:15px 13px;color:#999;background-color:#fff;float:left; }
+/*.nineGrid { width:204px;margin-right:13px;padding:15px 13px;color:#999;background-color:#fff;float:left; }
 .lastNineGrid { margin-right:0px; }
 .nineGrid h4 { line-height:16px;height:16px;font-size:16px; }
 .nineGrid h4 a { color:#666; }
 .nineGrid h4 a:hover { color:#5AD;text-decoration:none; }
 .nineGrid .bd { margin-top:13px; }
 .nineGrid .bd img{ width:62px;height:62px;border:1px solid #dedede;float:left;margin:0 2px 4px 2px; }
-.nineGrid .ft { padding-top:10px; }
+.nineGrid .ft { padding-top:10px; }*/
 /*QQ捆绑帐号合并*/
+/*
 .bundled_qq{padding:20px; overflow:hidden; text-align:center;}
 .bundled_qq p{ text-indent:2em;  color:#666; text-align:left;line-height:28px;}
 .bundled_qq .l-q-q{ background:url(images/l-qq.png);display:inline-block; margin:0 5px;width:120px;height:24px;text-indent:-1999px;}
@@ -1175,8 +1231,10 @@ input:-moz-placeholder { font-size:12px; }
 .bundled_qq .kn{ height:24px; margin:0 auto; width:260px; clear:both; padding:10px 0 0 0}
 
 .bundled_qq .know input{ vertical-align:middle; margin-right:2px;}
+*/
 
 /* 请好友鉴定弹窗 */
+/*
 .bind-sns,.bind-sns li{float:left}
 .bind-sns li{width: 16px;height: 16px;cursor: pointer;margin-right: 5px;}
 .invite-judge-dialog{}
@@ -1207,6 +1265,7 @@ input:-moz-placeholder { font-size:12px; }
 .judge-by-phone .phone-info .phone-info-nums a.add-phone-num-btn:hover{text-decoration:none;}
 .judge-by-phone .phone-info .phone-info-nums p{margin-top:5px;}
 .judge-by-phone .phone-info .phone-info-nums li a.J_DeletePhoneBtn{background:url(images/icon-delete.png);width:16px;height:16px;text-indent: -50px;margin-left:4px;cursor:pointer;}
+*/
 
 /* 关注弹层 */
 #followDialog { width:480px; }
@@ -1314,85 +1373,6 @@ input:-moz-placeholder { font-size:12px; }
 /* 直角box */
 .vertical-box{border:1px solid #EAEAE1;border-bottom-width:3px;background-color:#fff;}
 
-/* 富文本编辑器 */
-.smeite-editor-wrap{width:676px;float:left;}
-.smeite-editor{border:1px solid #ddd;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .edit-btns .bbl-btn{padding-left:0px;padding-right:0px;}
-.smeite-editor .edit-btns{background:#f3f3f3;position:relative;border-bottom:1px solid #ddd;height:40px;padding:0 5px;}
-.smeite-editor .edit-btns .font-btns {padding-top:7px;float:left;margin:0 5px;}
-.smeite-editor .edit-btns .split{border-left:1px solid #ddd;float:left;height:20px;width:6px;margin-left:5px;margin-top:10px;}
-.smeite-editor .edit-btns .media-btns {padding-top:7px;margin:0 1px;float:left;}
-.smeite-editor .edit-btns .media-btns a{height:24px;color:#666;line-height:24px;padding-left:28px;padding-right:6px;margin:1px;float:left;background:transparent url(images/edit_toolbar.gif) no-repeat;}
-.smeite-editor .edit-btns .media-btns a:hover{background-color:#fff;text-decoration:none;border:1px solid #ddd;margin:0px;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .edit-btns .font-size{}
-.smeite-editor .edit-btns .font-size a{color:#666;float:left;height:24px;line-height:24px;font-size:12px;white-space:nowrap;border:1px solid #ddd;padding:0 10px;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;}
-.smeite-editor .edit-btns .font-size a:hover{background:#fff;text-decoration:none;}
-.smeite-editor .edit-btns .font-bold{width:26px;margin-right:2px;}
-.smeite-editor .edit-btns .font-bold a{float:left;height:24px;width:24px;margin:1px;text-indent:-2000px;overflow:hidden;background:transparent url(images/edit_toolbar.gif) 2px -94px no-repeat;}
-.smeite-editor .edit-btns .font-bold a:hover{background-color:#fff;border:1px solid #ddd;margin:0px;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .edit-btns .font-bold-active{background:url(images/b_bg.gif) left 7px no-repeat;border:0;}
-.smeite-editor .edit-btns .font-bold-active a:hover{background-color:transparent;border:0px;margin:1px;}
-.smeite-editor .edit-btns .font-colo{width:26px;margin-left:2px;}
-.smeite-editor .edit-btns .font-colo a{float:left;height:16px;width:16px;margin:1px;padding:4px 5px;}
-.smeite-editor .edit-btns .font-colo a span{display:block;width:10px;height:10px;padding:2px;border:1px solid #ddd;}
-.smeite-editor .edit-btns .font-colo a i{display:block;width:10px;height:10px;overflow:hidden;line-height:1px;background:#000;}
-.smeite-editor .edit-btns .font-colo a:hover{background-color:#fff;border:1px solid #ddd;margin:0px;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .edit-btns .face a{background-position:5px 3px;}
-.smeite-editor .edit-btns .baobei a{background-position:5px -70px;}
-.smeite-editor .edit-btns .img a{background-position:5px -20px;}
-.smeite-editor .edit-btns .video a{background-position:5px -45px;}
-.smeite-editor iframe{width:100%;overflow:hidden;}
-.smeite-editor .iframeWrap{padding:8px;}
-.smeite-editor .fontSizeWrap{position:absolute;padding:0 2px 2px 2px;top:34px;left:10px;border:1px solid #ddd;background:#fff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .fontSizeWrap a{display:block;width:44px;margin-top:2px;padding-left:6px;height:24px;line-height:24px;text-align:left;color:#666;background:#f3f3f3;}
-.smeite-editor .fontSizeWrap a:hover{text-decoration:none;background:#f8f8f8;}
-.smeite-editor .fontColoWrap{position:absolute;padding:0 4px 4px 0px;top:34px;left:10px;border:1px solid #ddd;background:#fff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .fontColoWrap a{float:left;width:16px;height:16px;margin-top:4px;margin-left:4px;line-height:16px;text-indent:-2000px;overflow:hidden;position:relative;}
-.smeite-editor .faceWrap a:hover{text-decoration:none;}
-.smeite-editor .fontColoWrap{position:absolute;padding:0 4px 4px 0px;top:34px;left:10px;border:1px solid #ddd;background:#fff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .fontColoWrap a{float:left;width:16px;height:16px;margin-top:4px;margin-left:4px;line-height:16px;text-indent:-2000px;overflow:hidden;position:relative;}
-.smeite-editor .fontColoWrap a:hover{text-decoration:none;}
-.smeite-editor .faceWrap{position:absolute;padding:4px;top:34px;left:10px;border:1px solid #ddd;background:#fff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .faceWrap a{border-bottom:1px solid #ddd;border-right:1px solid #ddd;float:left;width:30px;height:30px;line-height:30px;text-indent:-2000px;overflow:hidden;position:relative;}
-.smeite-editor .faceWrap a:hover{text-decoration:none;}
-.smeite-editor .faceWrapBorder{border-left:1px solid #ddd;border-top:1px solid #ddd;width:372px;}
-.smeite-editor .imgWrap{position:absolute;padding:15px;width:366px;top:36px;left:10px;border:1px solid #ddd;background:#fff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;box-shadow:0 0 3px rgba(34,25,25,0.2);-moz-box-shadow:0 0 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 0 3px rgba(34,25,25,0.2)}
-.smeite-editor .imgWrap .uploadImg{position:relative;height:28px;/*padding-bottom:12px;border-bottom:1px dotted #ddd;*/}
-.smeite-editor .imgWrap .upload-cover{width:105px;}
-.smeite-editor .imgWrap .upload-btn{ position:absolute;top:0px;left:0px;filter:alpha(opacity=0);opacity:0;z-index:698;display:block;width:105px;height:28px; cursor:pointer;}
-.smeite-editor .imgWrap .netImg {display:none;}
-.smeite-editor .imgWrap .netImg p{height:20px;line-height:20px;padding:8px 0;}
-.smeite-editor .imgWrap .netImg .bbl-btn{width:60px;margin-top:2px;float:right;}
-.smeite-editor .imgWrap .tipbox-up{left:285px;}
-.smeite-editor .base-input{width:290px;float:left;}
-.smeite-editor .videoWrap{top:36px;left:10px;border:1px solid #ddd;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor .videoWrap #J_InsertVideo{width:60px;margin-top:2px;float:right;}
-.smeite-editor .videoWrap .content .tipbox-up{left:340px;}
-.smeite-editor .videoWrap .content .title{padding-bottom:10px;font-weight:normal;}
-.smeite-editor .videoWrap .content .sg-source p{height:20px;line-height:20px;padding:8px 0 5px 0;}
-.smeite-editor .videoWrap .sg-form .sg-input { margin-right:0px; }
-.icon-youku{height:20px;color:#666;line-height:20px;padding-left:22px;padding-right:6px;float:left;background:transparent url(images/edit_toolbar.gif) 0px -123px no-repeat;}
-.icon-tudou{height:20px;color:#666;line-height:20px;padding-left:22px;padding-right:6px;float:left;background:transparent url(images/edit_toolbar.gif) 0px -148px no-repeat;}
-.icon-sinavideo{height:20px;color:#666;line-height:20px;padding-left:22px;padding-right:6px;float:left;background:transparent url(images/edit_toolbar.gif) 0px -173px no-repeat;}
-.smeite-editor .baobeiWrap{top:36px;left:10px;border:1px solid #ddd;position:absolute;z-index:9997;width:396px;background:#fff;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;box-shadow:0 0 3px rgba(34,25,25,0.2);-moz-box-shadow:0 0 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 0 3px rgba(34,25,25,0.2);}
-.smeite-editor .baobeiWrap #J_InsertBaobei{width:60px;margin-top:2px;float:right;padding-left:0px;padding-right:0px;}
-.smeite-editor .baobeiWrap .content { position:relative;padding:12px 15px;min-height:0; }
-.smeite-editor .baobeiWrap .content .tipbox-up{left:216px;}
-.smeite-editor .baobeiWrap .content .title{padding-bottom:10px;font-weight:normal;color:#333;}
-.smeite-editor .baobeiWrap .content .sg-source p{height:20px;line-height:20px;padding:8px 0 5px 0;}
-.smeite-editor .baobeiWrap .sg-form .sg-input { float:left;_display:inline;width:290px;margin-right:0px; }
-.smeite-editor .baobeiWrap .sg-form .url-sub { margin-top:2px;cursor:pointer;*visibility:visible;width:56px\9; }
-.smeite-editor .baobeiWrap .sg-form .text-tip { display:none;padding:5px 0;line-height:1.1; }
-.smeite-editor .baobeiWrap .manual-upload { line-height:1.1;padding:5px 0 0 0;border-top:1px dotted #d1d1d1; }
-
-.smeite-editor-mediaViewWrap {min-height:100px;background:#f3f3f3;padding:0px 10px 10px 10px;margin-top:10px;border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
-.smeite-editor-mediaViewWrap .item{float:left;margin-right:10px;margin-top:10px;width:80px;}
-.smeite-editor-mediaViewWrap .item .mediaImg{width:80px;height:80px;overflow:hidden;position:relative;}
-.smeite-editor-mediaViewWrap .item .mediaImg .btn{display:none;height:24px;line-height:24px;color:#fff;text-align:center;position:absolute;bottom:0px;width:80px;left:0px;background:rgba(0,0,0,0.6);filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#cc000000',endColorstr='#cc000000');}
-.smeite-editor-mediaViewWrap .item .mediaImg .btn a{color:#fff;}
-.smeite-editor-mediaViewWrap .item .mediaImg .btn a:hover{color:#ccc;text-decoration:none;}
-.smeite-editor-mediaViewWrap .item img{width:80px;height:80px;}
-.smeite-editor-mediaViewWrap .item p{height:14px;line-height:14px;padding-top:6px;text-align:center;}
 
 /*gridGoods*/
 .goods-wall-news{/*overflow: hidden;*/width:960px;background:url(images/goods-wall-news.png) repeat-y;margin:10px auto;}
@@ -1507,13 +1487,12 @@ input:-moz-placeholder { font-size:12px; }
 .safari-mask .element-close{width:130px;height:35px;background:url(images/safari-mask.png) no-repeat -365px -930px;position:absolute;top:20px;right:90px;display:block;cursor:pointer}
 
 /* 喜欢 */
-/*
 #J_LikeDialog { display: none;width: 343px;border: 5px solid #ccc;-moz-border-radius: 3px;-webkit-border-radius: 3px;border-radius: 3px}
-#J_LikeDialog .content {position: relative; */
-/*padding: 20px;*//*
+#J_LikeDialog .content {position: relative;
+padding: 20px;
  background: #fff;  -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px}
-#J_LikeDialog .content .title { padding-left: 30px;height: 24px;line-height: 24px; color: #8fc31f;*/
-/*font-size: 18px;*//*
+#J_LikeDialog .content .title { padding-left: 30px;height: 24px;line-height: 24px; color: #8fc31f;
+font-size: 18px;
  background: url(images/detail-sprite.png) 0 0 no-repeat}
 #J_LikeDialog p {padding: 10px 0 12px}
 #J_LikeDialog .topic-box { width: 298px; height: 72px; border: 1px solid #ddd;overflow: auto}
@@ -1526,7 +1505,6 @@ input:-moz-placeholder { font-size:12px; }
 #J_LikeDialog .say-box input { padding: 6px 5px;width: 288px; height: 16px; line-height: 16px; border: 1px solid #ddd}
 #J_LikeDialog .content .close { position: absolute; top: 10px; right: 10px; width: 16px; height: 16px; background: url(images/close.png) no-repeat;  color: #999; font: 11px "Comic Sans MS"}
 #J_LikeDialog .content .close:hover {color: #5ad;text-decoration: none; background-position: 0 -16px}
-*/
 
 /*redactor js effect*/
 .redactor_box {
