--- a/public/assets/css/template/theme.detail.css
+++ b/public/assets/css/template/theme.detail.css
@@ -26,6 +26,7 @@
     -webkit-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.2)
 }
 
+/*
 .category {
     width: 980px;
     margin: 0 auto;
@@ -73,6 +74,7 @@
     color: #999;
     font-size: 14px
 }
+*/
 
 .side {
     margin-top: 20px
