--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -955,7 +955,7 @@ input:-moz-placeholder { font-size:12px; }
     float: right;
 }
 
-#J_newGiftDialog .gift_handle { margin:50px auto 10px;padding:0 15px 0 40px;width:65px;height:36px;line-height:36px;outline:none;color:#fff;text-align:left;background:#ee2266 url(images/like-btn.png) no-repeat right -45px;-moz-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-webkit-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; }
+#J_newGiftDialog .gift_handle { position:relative;margin:50px auto 10px;padding:0 15px 0 40px;width:65px;height:36px;line-height:36px;outline:none;color:#fff;text-align:left;background:#ee2266 url(images/like-btn.png) no-repeat right -45px;-moz-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-webkit-box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);box-shadow:0 0 0 4px rgba(255, 161, 13, 0.6);-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; }
 #J_newGiftDialog .gift_handle:hover { background-position:right -140px;text-decoration:none; }
 #J_newGiftDialog .gift_handle:active { background-position:right -240px;text-decoration:none; }
 #J_newGiftDialog .gift_handle i { position:relative;top:0;left:0;width:40px;height:36px;background:url(images/like-btn.png) no-repeat 0 0; }
