code new user prize

--- a/app/views/users/account/base.scala.html
+++ b/app/views/users/account/base.scala.html
@@ -55,9 +55,9 @@ user
                         <input type="text" class="base-input" name="blog" id="blog" value='@baseForm("blog").value' placeholder="http://">
                     </div>
                     <div class="form-row">
-                        <label>微信号：</label>
+                        <label>QQ号：</label>
                         <input type="text" class="base-input" name="weixin" id="weixin" value='@baseForm("weixin").value'
-                               placeholder="填写微信号，可能会有意外惊喜哦"><span class="ml10 gc">仅自己可见</span>
+                               placeholder="填写QQ号，可能会有意外惊喜哦"><span class="ml10 gc">仅自己可见</span>
                     </div>
                     <div class="form-row">
                         <label>自我介绍：</label>
